shorty: Fixed visibility of list header.

--- a/css/shorty.css
+++ b/css/shorty.css
@@ -51,7 +51,7 @@ html input, html textarea {
 	width: 99%;
 	background: transparent;
 	text-align: left;
-	top: 0.5em;
+	top: 3.0em;
 	margin: 0;
 	padding: 4px;
 }
